modified to improve performance